[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "how_is_the_weather"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A simple tool to describe weather conditions."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.scripts]
how-is-the-weather = "how_is_the_weather.weather:main"

