[project]
name = "how_is_the_weather"
version = "0.3.0"
authors = [{ name = "Jim Jimbo", email = "jim377893@gmail.com" }]
description = "A simple tool to describe weather conditions."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.scripts]
how-is-the-weather = "how_is_the_weather.weather:main"

[tool.poetry]
name = "how-is-the-weather"
version = "0.3.0"
description = "A simple tool to describe weather conditions"
authors = ["Jim Jimbo <jim377893@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jimbosimbo/howstheweather"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
